--- a/index.html
+++ b/index.html
@@ -6,38 +6,193 @@
 
 <style type="text/css">
 body{
-  background-color: #000000;
+  background-color: #697ea5;
   color: white;
 }
 hr {
 
-    color: #005576;
+    border-color: #005576;
 
-    border-width: 1px;
+    border-width: 2px;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+.nav{
+    background: black;
+    width: 100%;
+}
+.nav ul li{
+    list-style: none;
+    display: inline-block;
+    margin-right: -4px;
+    position: relative;
+    padding: 5px 5px;
+}
+.nav a{
+
+
+    padding: 5px 5px;
+    display: block;
+    text-decoration: none;
+    .sidenav {
+        height: 100%; /* 100% Full-height */
+        width: 0; /* 0 width - change this with JavaScript */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Stay on top */
+        top: 0;
+        left: 0;
+        background-color: #111; /* Black*/
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 60px; /* Place content 60px from the top */
+        transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    }
+
+    /* The navigation menu links */
+    .sidenav a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+    }
+
+    /* When you mouse over the navigation links, change their color */
+    .sidenav a:hover{
+        color: #f1f1f1;
+    }
+
+    /* Position and style the close button (top right corner) */
+    .sidenav .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+    }
+
+    /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+    #main {
+
+        transition: margin-left .5s;
+        padding: 20px;
+    }
+
+    /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+    @media screen and (max-height: 450px) {
+        .sidenav {padding-top: 15px;}
+        .sidenav a {font-size: 18px;}
+    }
+
+}
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: #131313; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+
+    transition: 0s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 18px  32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+    text-align: center;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover{
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left 0s;
+    padding: 0px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
 </style>
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("main").style.marginLeft = "250px";
+}
 
-  <div id="myDropdown" class="dropdown-content" align="right">
-weRchan
-<font size = "4">
-<a href="https://github.com/join?source=header-home" style="color:white">About</a>
-</font>
-  <font size = "2">
-    <a href="https://github.com/join?source=header-home" style="color:#4eab38">Sign Up</a>
-    /
-    <a href="https://github.com/login?return_to=%2Fjoin%3Fsource%3Dheader-home" style="color:#68cdcd">Sign In</a>
-</font>
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("main").style.marginLeft= "0";
+}
+</script>
+
+<div class="nav" align="right">
+    <ul>
+      <img src="https://imgur.com/erI3TJf" alt="weRchan" style="width:104px;height:142px;" >
+        <li><font size = "4"><a href="#" style="color: white">About</a></li></font>
+        <li><font size = "2">
+              Account
+          <a href="https://github.com/join?source=header-home" style="color:#4eab38">Sign Up</a>
+        </li>
+        /
+        <li><a href="https://github.com/login?return_to=%2Fjoin%3Fsource%3Dheader-home" style="color:#68cdcd">Sign In</a>
+      </font></li>
+
+    </ul>
 
 </div>
 
-<hr>
+<hr style="color: #005576" >
 
 
 </head>
 
 <br>
 <body>
+  <div id="mySidenav" class="sidenav">
+    <a>-sections-</a>
+    <hr>
+    <a href="#">art</a>
+    <hr>
+    <a href="#">music</a>
+    <hr>
+    <a href="#">tv</a>
+    <hr>
+    <a href="#">movies</a>
+    <hr>
+  </div>
 
+  <!-- Use any element to open the sidenav -->
+  <span onclick="openNav()" style="color: #005576">►</span>
+
+
+  <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+  <div id="main">
+  <span onclick="closeNav()" style="color: #005576">◄</span>
+  </div>
 
 </body>
   </font>
