--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ function closeNav() {
 <div class="nav" align="right">
     <ul>
 <li><a href="https://jonnychiwa.github.io/"><img src="https://i.imgur.com/erI3TJf.png" alt="weRchan" style="width:100px;height:60px;" align="center"></a></li>
-        <li><font size = "4"><a href="#" style="color: white">About</a></li></font>
+        <li><font size = "4"><a href="https://jonnychiwa.github.io/about.html" style="color: white">About</a></li></font>
 
         <li><font size = "2">
               Account
