--- a/about.html
+++ b/about.html
@@ -152,6 +152,7 @@ function closeNav() {
 <div class="nav" align="right">
     <ul>
 <li><a href="https://jonnychiwa.github.io/"><img src="https://i.imgur.com/erI3TJf.png" alt="weRchan" style="width:100px;height:60px;" align="center"></a></li>
+<li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
         <li><font size = "4"><a href="https://jonnychiwa.github.io/about.html" style="color: white">About</a></li></font>
 
         <li><font size = "2">
@@ -180,9 +181,23 @@ function closeNav() {
     <hr>
     <a href="#">music</a>
     <hr>
-    <a href="#">tv</a>
+    <a href="#">tv/movies</a>
     <hr>
-    <a href="#">movies</a>
+    <a href="#">porn</a>
+    <hr>
+    <a href="#">politics</a>
+    <hr>
+    <a href="#">history</a>
+    <hr>
+    <a href="#">food</a>
+    <hr>
+    <a href="#">earthporn</a>
+    <hr>
+    <a href="#">tentacle porn</a>
+    <hr>
+    <a href="#">gaming</a>
+    <hr>
+    <a href="#">news</a>
     <hr>
   </div>
 
