--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ function closeNav() {
 <div class="nav" align="right">
     <ul>
 <li><a href="https://jonnychiwa.github.io/"><img src="https://i.imgur.com/erI3TJf.png" alt="weRchan" style="width:100px;height:60px;" align="center"></a></li>
+<li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
         <li><font size = "4"><a href="https://jonnychiwa.github.io/about.html" style="color: white">About</a></li></font>
 
         <li><font size = "2">
@@ -180,9 +181,23 @@ function closeNav() {
     <hr>
     <a href="#">music</a>
     <hr>
-    <a href="#">tv</a>
+    <a href="#">tv/movies</a>
     <hr>
-    <a href="#">movies</a>
+    <a href="#">porn</a>
+    <hr>
+    <a href="#">politics</a>
+    <hr>
+    <a href="#">history</a>
+    <hr>
+    <a href="#">food</a>
+    <hr>
+    <a href="#">earthporn</a>
+    <hr>
+    <a href="#">tentacle porn</a>
+    <hr>
+    <a href="#">gaming</a>
+    <hr>
+    <a href="#">news</a>
     <hr>
   </div>
 
@@ -194,18 +209,7 @@ function closeNav() {
   <div id="main">
   <span onclick="closeNav()" style="color: #005576">◄</span>
   </div>
-
+<img src="https://i.imgur.com/QN7z7au.png" alt="weRchan"  align="right">
 </body>
   </font>
 </html>
-[form.html]
-``<html><body><h1>Post here:</h1><form name="theform" action="post.php" method="post"><textarea name="comment" placeholder="Post a comment here" rows="8" cols="64"></textarea> <input type="submit" name="submit" value="Reply" /></form></body></html>
-
-[post.php]
-``<?php $conn = mysql_connect('localhost','root',''); $db = mysql_select_db('wakaba_beta',$conn);
-$mysql_query("INSERT INTO wakaba_beta.posts (name,comment) VALUES ('Anonymous','".mysql_real_escape_string($_POST['comment'])."');
-mysql_close();
-header('location:posts.html'); ?>
-
-[posts.html]
-``<html><body><h1>Showing all posts:</h1><?php $query = mysql_query('SELECT * FROM wakaba_beta.posts; foreach($row = mysql_fetch_assoc($query) { echo "<p>Name: ".$row['name']."<br />".htmlspecialchars(str_replace(PHP.EOL,"<br />",$row['comment']))."</p>"; ?></body></html>
